title and footer is changed

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apex</title>
+    <title>TechApex</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://assets.ajio.com/static/img/favicon.ico">
 </head>
 <body>
     <header>
-        <h2 class="logo">Apex Shopping</h2>
+        <h2 class="logo">Tech Apex</h2>
         <nav class="navigation">
             <a href="">Home</a>
             <a href="">About</a>
@@ -82,7 +82,7 @@
 
 
     <footer class="footer">
-        <p>@Copyright 2023 <span>ApexShopping</span></p>
+        <p>@Copyright 2023 <span>TechApex</span></p>
     </footer>
 
 
